# Img_Style_Transfer

./: .gitignore  README.md  pyproject.toml
notebooks/: Untitled.ipynb  layer_choice.ipynb  style_content_ratio_experiment.ipynb  style_transfer.ipynb
notebooks/.ipynb_checkpoints/: style_transfer-checkpoint.ipynb
src/: layer_choice.py  layer_choice_content.py  layer_choice_style.py  style_content_ratio_experiment.py  style_transfer.py
utils/: utils.py
